<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.PreferenceCategory
        app:key="suntimeapi_category"
        app:title="@string/sun_sunrise_api_settings">

        <androidx.preference.SwitchPreferenceCompat
            app:key="useManualCoordinates"
            app:title="@string/use_manual_coordinates"
            app:summary="@string/use_manual_coordinates_summary" />

        <androidx.preference.EditTextPreference
            app:key="latitude"
            app:title="@string/latitude_label"
            app:dialogTitle="@string/enter_latitude"
            app:useSimpleSummaryProvider="true"
            app:dependency="useManualCoordinates"
            android:inputType="numberDecimal|numberSigned" />

        <androidx.preference.EditTextPreference
            app:key="longitude"
            app:title="@string/longitude"
            app:dialogTitle="@string/enter_longitude"
            app:useSimpleSummaryProvider="true"
            app:dependency="useManualCoordinates"
            android:inputType="numberDecimal|numberSigned" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        app:key="music_category"
        app:title="@string/music_settings_title">

        <androidx.preference.Preference
            app:key="music_sources_screen"
            app:title="@string/music_sources_title"
            app:summary="@string/music_sources_summary"
            app:fragment="com.nxd1frnt.clockdesk2.music.ui.MusicSourcesFragment" />

        <androidx.preference.SwitchPreferenceCompat
            app:key="lastfm_albumart_background"
            app:title="@string/set_album_art_as_background"
            app:summary="@string/set_album_art_as_background_summary" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        app:key="performance_category"
        app:title="@string/performance_settings">

        <androidx.preference.SwitchPreferenceCompat
            app:key="additional_logging"
            app:title="@string/enable_additional_logging"
            app:summary="@string/enable_additional_logging_summary" />

        <androidx.preference.SwitchPreferenceCompat
            app:key="show_performance_overlay"
            app:title="@string/show_performance_overlay_title"
            app:summary="@string/show_performance_overlay_summary"
            android:defaultValue="false" />

        <androidx.preference.SwitchPreferenceCompat
            app:key="advanced_graphics"
            app:title="@string/enable_advanced_graphics"
            app:summary="@string/enable_advanced_graphics_summary" />

        <androidx.preference.SwitchPreferenceCompat
            app:key="graphics_enable_transitions"
            app:title="@string/graphics_enable_transitions_title"
            app:summary="@string/graphics_enable_transitions_summary"
            android:defaultValue="true"
            app:dependency="advanced_graphics" />

        <androidx.preference.SwitchPreferenceCompat
            app:key="graphics_enable_turbulence"
            app:title="@string/graphics_enable_turbulence_title"
            app:summary="@string/graphics_enable_turbulence_summary"
            android:defaultValue="true"
            app:dependency="advanced_graphics" />

        <androidx.preference.SeekBarPreference
            app:key="graphics_turbulence_grid"
            app:title="@string/graphics_turbulence_grid_title"
            app:summary="@string/graphics_turbulence_grid_summary"
            android:min="5"
            android:max="50"
            android:defaultValue="10"
            app:showSeekBarValue="true"
            app:dependency="graphics_enable_turbulence" />

        <androidx.preference.SeekBarPreference
            app:key="graphics_turbulence_speed"
            app:title="@string/graphics_turbulence_speed_title"
            app:summary="@string/graphics_turbulence_speed_summary"
            android:min="1"
            android:max="30"
            android:defaultValue="10"
            app:showSeekBarValue="true"
            app:dependency="graphics_enable_turbulence" />

        <androidx.preference.SwitchPreferenceCompat
            app:key="graphics_enable_edit_blur"
            app:title="@string/graphics_enable_edit_blur_title"
            app:summary="@string/graphics_enable_edit_blur_summary"
            android:defaultValue="true"
            app:dependency="advanced_graphics" />

        <androidx.preference.SeekBarPreference
            app:key="graphics_render_scale"
            app:title="@string/graphics_render_scale_title"
            app:summary="@string/graphics_render_scale_summary"
            android:min="10"
            android:max="100"
            android:defaultValue="100"
            app:showSeekBarValue="true"
            app:dependency="advanced_graphics" />

        <androidx.preference.SeekBarPreference
            app:key="graphics_weather_scale"
            app:title="@string/graphics_weather_scale_title"
            app:summary="@string/graphics_weather_scale_summary"
            android:min="10"
            android:max="100"
            android:defaultValue="40"
            app:showSeekBarValue="true"
            app:dependency="advanced_graphics" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        app:key="battery_saver_category"
        app:title="@string/battery_saver_settings_title">

        <androidx.preference.SwitchPreferenceCompat
            app:key="power_saver_manual"
            app:title="@string/power_saver_manual_title"
            app:summary="@string/power_saver_manual_summary" />

        <androidx.preference.SwitchPreferenceCompat
            app:key="power_saver_sync_system"
            app:title="@string/power_saver_sync_system_title"
            app:summary="@string/power_saver_sync_system_summary"
            android:defaultValue="true" />

        <androidx.preference.SwitchPreferenceCompat
            app:key="automatic_battery_saver_mode"
            app:title="@string/automatic_battery_saver_mode_title"
            app:summary="@string/automatic_battery_saver_mode_summary" />

        <androidx.preference.SeekBarPreference
            app:key="battery_saver_trigger"
            app:title="@string/battery_saver_trigger_title"
            app:summary="@string/battery_saver_trigger_summary"
            android:min="5"
            android:max="90"
            android:defaultValue="15"
            app:showSeekBarValue="true"
            app:dependency="automatic_battery_saver_mode" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        app:key="power_saver_rules_category"
        app:title="@string/power_saver_rules_title">

        <androidx.preference.SwitchPreferenceCompat
            app:key="power_saver_disable_animations"
            app:title="@string/power_saver_disable_animations_title"
            app:summary="@string/power_saver_disable_animations_summary"
            android:defaultValue="true" />

        <androidx.preference.SwitchPreferenceCompat
            app:key="power_saver_limit_fps"
            app:title="@string/power_saver_limit_fps_title"
            app:summary="@string/power_saver_limit_fps_summary"
            android:defaultValue="true" />

        <androidx.preference.SeekBarPreference
            app:key="power_saver_fps_limit_value"
            app:title="@string/power_saver_fps_limit_value_title"
            app:summary="@string/power_saver_fps_limit_value_summary"
            android:min="15"
            android:max="60"
            android:defaultValue="30"
            app:showSeekBarValue="true"
            app:dependency="power_saver_limit_fps" />

        <androidx.preference.SwitchPreferenceCompat
            app:key="power_saver_disable_weather"
            app:title="@string/power_saver_disable_weather_title"
            app:summary="@string/power_saver_disable_weather_summary"
            android:defaultValue="true" />

        <androidx.preference.SwitchPreferenceCompat
            app:key="power_saver_lock_brightness"
            app:title="@string/power_saver_lock_brightness_title"
            app:summary="@string/power_saver_lock_brightness_summary"
            android:defaultValue="true" />

        <androidx.preference.SeekBarPreference
            app:key="power_saver_brightness_level"
            app:title="@string/power_saver_brightness_level_title"
            app:summary="@string/power_saver_brightness_level_summary"
            android:min="1"
            android:max="100"
            android:defaultValue="1"
            app:showSeekBarValue="true"
            app:dependency="power_saver_lock_brightness" />

        <androidx.preference.SwitchPreferenceCompat
            app:key="power_saver_limit_clock"
            app:title="@string/power_saver_limit_clock_title"
            app:summary="@string/power_saver_limit_clock_summary"
            android:defaultValue="true" />

        <androidx.preference.SwitchPreferenceCompat
            app:key="power_saver_disable_light_sensor"
            app:title="@string/power_saver_disable_light_sensor_title"
            app:summary="@string/power_saver_disable_light_sensor_summary"
            android:defaultValue="true" />

        <androidx.preference.SwitchPreferenceCompat
            app:key="power_saver_enable_smart_pixels"
            app:title="@string/power_saver_enable_smart_pixels_title"
            app:summary="@string/power_saver_enable_smart_pixels_summary"
            android:defaultValue="true" />

        <androidx.preference.SwitchPreferenceCompat
            app:key="power_saver_dim_background"
            app:title="@string/power_saver_dim_background_title"
            app:summary="@string/power_saver_dim_background_summary"
            android:defaultValue="true" />

        <androidx.preference.SeekBarPreference
            app:key="power_saver_dim_level"
            app:title="@string/power_saver_dim_level_title"
            app:summary="@string/power_saver_dim_level_summary"
            android:min="0"
            android:max="100"
            android:defaultValue="85"
            app:showSeekBarValue="true"
            app:dependency="power_saver_dim_background" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        app:key="display_category"
        app:title="@string/display_settings_title">

        <androidx.preference.SwitchPreferenceCompat
            app:key="burn_in_protection"
            app:title="@string/burn_in_protection_title"
            app:summary="@string/burn_in_protection_summary" />

        <androidx.preference.SwitchPreferenceCompat
            app:key="smart_pixels_enabled"
            app:title="@string/smart_pixels_title"
            app:summary="@string/smart_pixels_summary"
            app:dependency="burn_in_protection" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        app:key="smart_chips_category"
        app:title="@string/smart_chips_settings_title">

        <androidx.preference.Preference
            app:key="smart_chips_screen"
            app:title="@string/manage_smart_chips"
            app:summary="@string/manage_smart_chips_summary"
            app:fragment="com.nxd1frnt.clockdesk2.smartchips.ui.SmartChipsPluginsFragment" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        app:key="backup_restore_category"
        app:title="@string/backup_restore_title">

        <androidx.preference.Preference
            app:key="export_settings"
            app:title="@string/export_settings" />

        <androidx.preference.Preference
            app:key="import_settings"
            app:title="@string/import_settings" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>